--- a/src/app/pages/shared/navbar/navbar.component.html
+++ b/src/app/pages/shared/navbar/navbar.component.html
@@ -5,6 +5,11 @@
       &#9776;
     </button>
     <div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item" [routerLinkActive]="['active']">
+          <a class="nav-link" routerLink="signup" (click)="isCollapsed = true">Signup</a>
+        </li>
+      </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item" [routerLinkActive]="['active']">
           <a class="nav-link" routerLink="login" (click)="isCollapsed = true">Login</a>
